# ets2-sdk-plugin

./: CMakeLists.txt  README.md
ets2-telemetry/inc/: ets2-telemetry-common.hpp  scs_config_handlers.hpp  sharedmemory.hpp
ets2-telemetry/src/: ets2-telemetry.cpp  scs_config_handlers.cpp  sharedmemory.cpp
